--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <button onclick="triggerUpload('oreo')" class="upload-btn absolute top-0 right-0 bg-blue-500 text-white p-1 rounded-full text-xs hidden">📷</button>
                     </div>
                     <h3 class="font-dancing text-2xl font-bold text-amber-900 mb-2 editable" onclick="makeEditable(this)">Oreo</h3>
-                    <p class="text-amber-700 mb-4 editable" onclick="makeEditable(this)">Delicioso pastel con galletas Oreo trituradas y crema suave</p>
+                    <p class="text-amber-700 mb-4 editable" onclick="makeEditable(this)">Delicioso pastel con Oreo triturado y crema suave</p>
                     <button onclick="orderFlavor('Oreo')" class="btn-chocolate text-white px-6 py-2 rounded-full font-semibold">
                         Pedir Ahora
                     </button>
@@ -480,7 +480,7 @@
                 <div class="text-center">
                     <p class="text-amber-200 text-sm editable" onclick="makeEditable(this)">Síguenos en nuestras redes sociales</p>
                 </div>
-                <p class="text-amber-200 text-sm mt-6 editable" onclick="makeEditable(this)">&copy; 2024 Lalito Cake. Todos los derechos reservados.</p>
+                <p class="text-amber-200 text-sm mt-6 editable" onclick="makeEditable(this)">&copy; 2024 Lalito Cake. Diseñado por: LEONOVA STUDIO</p>
             </div>
         </div>
     </footer>
@@ -1002,3 +1002,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9775f85156417ea1',t:'MTc1NjU3NDU0My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
