--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             </div>
                             <div>
                                 <h3 class="font-semibold text-amber-900">Ubicación</h3>
-                                <p class="text-amber-700 editable" onclick="makeEditable(this)">Venezuela</p>
+                                <p class="text-amber-700 editable" onclick="makeEditable(this)">Tucupita-Venezuela</p>
                             </div>
                         </div>
                         
@@ -1002,5 +1002,6 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9775f85156417ea1',t:'MTc1NjU3NDU0My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
