--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <button onclick="triggerUpload('oreo')" class="upload-btn absolute top-0 right-0 bg-blue-500 text-white p-1 rounded-full text-xs hidden">🔄</button>
                     </div>
                     <h3 class="font-dancing text-2xl font-bold text-amber-900 mb-2 editable" onclick="makeEditable(this)">Oreo</h3>
-                    <p class="text-amber-700 mb-4 editable" onclick="makeEditable(this)">Delicioso pastel con galletas Oreo trituradas y crema suave</p>
+                    <p class="text-amber-700 mb-4 editable" onclick="makeEditable(this)">Delicioso pastel con Oreos trituradas y crema suave</p>
                     <button onclick="orderFlavor('Oreo')" class="btn-chocolate text-white px-6 py-2 rounded-full font-semibold">
                         Pedir Ahora
                     </button>
@@ -394,7 +394,7 @@
                             </div>
                             <div>
                                 <h3 class="font-semibold text-amber-900">Ubicación</h3>
-                                <p class="text-amber-700 editable" onclick="makeEditable(this)">Venezuela</p>
+                                <p class="text-amber-700 editable" onclick="makeEditable(this)">Tucupita-Venezuela</p>
                             </div>
                         </div>
                         
@@ -470,7 +470,7 @@
                 <div class="text-center">
                     <p class="text-amber-200 text-sm editable" onclick="makeEditable(this)">Síguenos en nuestras redes sociales</p>
                 </div>
-                <p class="text-amber-200 text-sm mt-6 editable" onclick="makeEditable(this)">&copy; 2024 Lalito Cake. Todos los derechos reservados.</p>
+                <p class="text-amber-200 text-sm mt-6 editable" onclick="makeEditable(this)">&copy; 2025 Lalito Cake. Diseñado por: LEONOVA STUDIO</p>
             </div>
         </div>
     </footer>
@@ -854,7 +854,7 @@
         
         function checkAdminPassword() {
             const password = document.getElementById('adminPassword').value;
-            if (password === 'lalito2024') {
+            if (password === 'choroco') {
                 isAdminMode = true;
                 closeAdminModal();
                 document.getElementById('adminPanel').classList.remove('hidden');
