--- a/index.html
+++ b/index.html
@@ -638,13 +638,13 @@
         const imageDatabase = {
             // Imágenes de sabores - Incluye todas las posibles imágenes
             flavors: {
-                oreo: ['🍪', 'images/oreo-cake1.jpg', 'images/oreo-cake2.jpg', 'images/oreo-cake3.jpg', 'images/oreo-cake4.jpg', 'images/oreo-cake5.jpg'],
-                nutella: ['🍫', 'images/nutella-cake1.jpg', 'images/nutella-cake2.jpg', 'images/nutella-cake3.jpg', 'images/nutella-cake4.jpg', 'images/nutella-cake5.jpg'],
-                '3leches': ['🥛', 'images/3leches-cake1.jpg', 'images/3leches-cake2.jpg', 'images/3leches-cake3.jpg', 'images/3leches-cake4.jpg', 'images/3leches-cake5.jpg'],
-                napolitana: ['🍓', 'images/napolitana-cake1.jpg', 'images/napolitana-cake2.jpg', 'images/napolitana-cake3.jpg', 'images/napolitana-cake4.jpg', 'images/napolitana-cake5.jpg'],
-                chocoflan: ['🍮', 'images/chocoflan-cake1.jpg', 'images/chocoflan-cake2.jpg', 'images/chocoflan-cake3.jpg', 'images/chocoflan-cake4.jpg', 'images/chocoflan-cake5.jpg'],
-                pina: ['🍍', 'images/pina-cake1.jpg', 'images/pina-cake2.jpg', 'images/pina-cake3.jpg', 'images/pina-cake4.jpg', 'images/pina-cake5.jpg'],
-                arequipe: ['🍯', 'images/arequipe-cake1.jpg', 'images/arequipe-cake2.jpg', 'images/arequipe-cake3.jpg', 'images/arequipe-cake4.jpg', 'images/arequipe-cake5.jpg']
+                oreo: ['🍪', 'images/oreo.jpg'],
+                nutella: ['🍫', 'images/nutella.jpg'],
+                '3leches': ['🥛', 'images/3leches.jpg'],
+                napolitana: ['🍓', 'images/napolitana.jpg'],
+                chocoflan: ['🍮', 'images/chocoflan.jpg'],
+                pina: ['🍍', 'images/pina.jpg'],
+                arequipe: ['🍯', 'images/arequipe.jpg']
             },
             // Imágenes del carrusel
             carousel: ['hero-gradient', 'images/carousel-slide1.jpg', 'images/carousel-slide2.jpg', 'images/carousel-slide3.jpg', 'images/hero1.jpg', 'images/hero2.jpg', 'images/banner1.jpg', 'images/banner2.jpg']
@@ -1236,3 +1236,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9777684e65fb3404',t:'MTc1NjU4OTYxNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
