--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             flavors: {
                 oreo: ['🍪', 'images/oreo.jpg'],
                 nutella: ['🍫', 'images/nutella.jpg'],
-                '3leches': ['🥛', 'images/3leches.jpg'],
+                3leches': ['🥛', 'images/3leche.jpg'],
                 napolitana: ['🍓', 'images/napolitana.jpg'],
                 chocoflan: ['🍮', 'images/chocoflan.jpg'],
                 pina: ['🍍', 'images/pina.jpg'],
@@ -1236,4 +1236,5 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9777684e65fb3404',t:'MTc1NjU4OTYxNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
