--- a/index.html
+++ b/index.html
@@ -640,14 +640,14 @@
             flavors: {
                 oreo: ['🍪', 'images/oreo.jpg'],
                 nutella: ['🍫', 'images/nutella.jpg'],
-                3leches': ['🥛', 'images/3leche.jpg'],
+                tresleches': ['🥛', 'images/3leche.jpg'],
                 napolitana: ['🍓', 'images/napolitana.jpg'],
                 chocoflan: ['🍮', 'images/chocoflan.jpg'],
                 pina: ['🍍', 'images/pina.jpg'],
                 arequipe: ['🍯', 'images/arequipe.jpg']
             },
             // Imágenes del carrusel
-            carousel: ['hero-gradient', 'images/carousel-slide1.jpg', 'images/carousel-slide2.jpg', 'images/carousel-slide3.jpg', 'images/hero1.jpg', 'images/hero2.jpg', 'images/banner1.jpg', 'images/banner2.jpg']
+            carousel: ['hero-gradient', 'images/carousel-slide1.jpeg', 'images/carousel-slide2.jpeg', 'images/carousel-slide3.jpeg', 'images/hero1.jpg', 'images/hero2.jpg', 'images/banner1.jpg', 'images/banner2.jpg']
         };
         
         // Función simple para verificar si una imagen existe
@@ -1236,5 +1236,6 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9777684e65fb3404',t:'MTc1NjU4OTYxNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
